syntax = "proto3";

package common;

message StringArray {
  repeated string values = 1;
}
